VR: Ensure omnibox text does not overlap voice button

Until now, a lengthy text input in the omnibox would disappear under the
voice button on the right end of the bar.  Size things so that this
doesn't happen.  In the future, we should use linear layout capabilities
to automate this (a bug tracking that improvement exists).

BUG=806889

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I28714cba111b42d0ecf1900c873aa1856ad1c572
Reviewed-on: https://chromium-review.googlesource.com/916862
Reviewed-by: Tibor Goldschwendt <tiborg@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536469}
Former-commit-id: 12dc6f53292f756a16368e92b35af0705138645b