chrome/browser/vr/elements/ui_element_type.cc
@@ -24,7 +24,7 @@ static const char* g_ui_element_type_strings[] = {
     "kTypeOmniboxSuggestionIcon",
     "kTypeOmniboxSuggestionContentText",
     "kTypeOmniboxSuggestionDescriptionText",
-    "kTypeOmniboxSuggestionSpacer",
+    "kTypeSpacer",
     "kTypeTextInputHint",
     "kTypeTextInputText",
     "kTypeTextInputCursor",
