chrome/browser/vr/elements/ui_element_type.h
@@ -24,7 +24,7 @@ enum UiElementType {
   kTypeOmniboxSuggestionIcon,
   kTypeOmniboxSuggestionContentText,
   kTypeOmniboxSuggestionDescriptionText,
-  kTypeOmniboxSuggestionSpacer,
+  kTypeSpacer,
   kTypeTextInputHint,
   kTypeTextInputText,
   kTypeTextInputCursor,
