chrome/browser/vr/ui_scene_constants.h
@@ -233,6 +233,8 @@ static constexpr float kOmniboxTextFieldIconSizeDMM = 0.05f;
 static constexpr float kOmniboxTextFieldIconButtonSizeDMM = 0.064f;
 static constexpr float kOmniboxTextFieldIconButtonRadiusDMM = 0.006f;
 static constexpr float kOmniboxTextFieldIconButtonHoverOffsetDMM = 0.0f;
+static constexpr float kOmniboxTextFieldRightMargin =
+    ((kOmniboxHeightDMM - kOmniboxTextFieldIconButtonSizeDMM) / 2);
 
 static constexpr float kSuggestionHeightDMM = 0.088f;
 static constexpr float kSuggestionGapDMM = 0.0018f;
